fork gfxboot from antergos, and modify for monArch use

--- a/isolinux/isolinux.cfg
+++ b/isolinux/isolinux.cfg
@@ -1,6 +1,26 @@
-PATH /%INSTALL_DIR%/boot/syslinux/
-DEFAULT loadconfig
+default start
+implicit 1
+display isolinux.msg
+ui gfxboot bootlogo isolinux.msg
+prompt   1
+timeout  200
 
-LABEL loadconfig
-  CONFIG /%INSTALL_DIR%/boot/syslinux/archiso.cfg
-  APPEND /%INSTALL_DIR%/
+label start
+  kernel /%INSTALL_DIR%/boot/x86_64/vmlinuz
+  append initrd=/%INSTALL_DIR%/boot/intel_ucode.img,/%INSTALL_DIR%/boot/x86_64/archiso.img archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+
+label harddisk
+  com32 whichsys.c32
+  append -iso- chain.c32 hd0 
+  
+label hdt
+  kernel hdt.c32
+
+label memtest
+  kernel memtest
+
+label Reboot
+  kernel reboot.c32
+
+label Poweroff
+  kernel poweroff.c32
