--- a/isolinux/isolinux.cfg
+++ b/isolinux/isolinux.cfg
@@ -7,12 +7,12 @@ timeout  200
 
 label start
   kernel /%INSTALL_DIR%/boot/x86_64/vmlinuz
-  append initrd=/%INSTALL_DIR%/boot/x86_64/archiso.img archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+  append initrd=/%INSTALL_DIR%/boot/intel_ucode.img,/%INSTALL_DIR%/boot/x86_64/archiso.img archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archisocowlabel=ANT_OVRLY earlymodules=loop modules-load=loop rd.modules-load=loop udev.log-priority=crit rd.udev.log-priority=crit quiet splash
 
 label harddisk
   com32 whichsys.c32
-  append -iso- chain.c32 hd0
-
+  append -iso- chain.c32 hd0 
+  
 label hdt
   kernel hdt.c32
 
@@ -22,5 +22,5 @@ label memtest
 label Reboot
   kernel reboot.c32
 
-label Poweroff
+label Shutdown
   kernel poweroff.c32
