--- a/isolinux/gfxboot.cfg
+++ b/isolinux/gfxboot.cfg
@@ -12,9 +12,9 @@
 
 [base]
 ; theme name
-theme=gfxboot
+theme=antergos-gfxboot
 ; product name
-product=monArch
+product=Antergos
 ; other sections to read
 layout=800x600,live,install
 ; sound volume (0..100)
@@ -32,35 +32,35 @@ mainmenu.bar.minwidth=300
 ; main menu selection bar transparency (0..255)
 mainmenu.bar.transparency=0
 ; main menu colors
-mainmenu.bar.color=0xffffff
-mainmenu.normal.fg=0xffffff
-mainmenu.selected.fg=0x000000
+mainmenu.bar.color=0x1692d0
+mainmenu.normal.fg=0x4c4c4c
+mainmenu.selected.fg=0xf6f6f6
 ; boot option colors
-bootopt.label.fg=0xffffff
-bootopt.text.fg=0xffffff
+bootopt.label.fg=0x4c4c4c
+bootopt.text.fg=0x4c4c4c
 ; progress bar color
-progress.bar.color=0x295202
+progress.bar.color=0x1692d0
 ; menu colors
-menu.normal.bg=0xd8deed
-menu.normal.fg=0x000000
-menu.normal.alt.fg=0x606060
-menu.selected.bg=0x6c6c6c
-menu.selected.fg=0xffffff
+menu.normal.bg=0x4c4c4c
+menu.normal.fg=0xf6f6f6
+menu.normal.alt.fg=0x1692d0
+menu.selected.bg=0x1692d0
+menu.selected.fg=0xf6f6f6
 ; window colors
-window.bg=0xd8deed
+window.bg=0xc9cacd
 window.fg=0x000000
-window.title.bg=0x217b05
-window.title.fg=0xffffff
-window.title.error.bg=0xc00000
+window.title.bg=0x4c4c4c
+window.title.fg=0xf6f6f6
+window.title.error.bg=0x7a0600
 ; help system colors
-help.link.fg=0x0000a0
-help.link.selected.fg=0xffffff
-help.link.selected.bg=0x0000a0
-help.highlight.fg=0x009000
+help.link.fg=0x1692d0
+help.link.selected.fg=0xfd9f25
+help.link.selected.bg=0x1692d0
+help.highlight.fg=0x1692d0
 ; panel colors
-panel.fg=0xffffff
-panel.title.fg=0xffffff
-panel.f-key.fg=0xffe050
+panel.fg=0x4c4c4c
+panel.title.fg=0x4c4c4c
+panel.f-key.fg=0x1692d0
 ; default keymap (e.g. de-latin1-nodeadkeys or cz-lat2-us)
 keymap=
 ; replace underscores ('_') with space in menu entries
