add new isolinux

--- a/isolinux/gfxboot.cfg
+++ b/isolinux/gfxboot.cfg
@@ -12,9 +12,9 @@
 
 [base]
 ; theme name
-theme=antergos-gfxboot
+theme=MyArch-gfxboot
 ; product name
-product=Antergos
+product=MyArch
 ; other sections to read
 layout=800x600,live,install
 ; sound volume (0..100)
