update isolinux and add script

--- a/isolinux/isolinux.cfg
+++ b/isolinux/isolinux.cfg
@@ -1,13 +1,14 @@
 default start
-implicit	1
+implicit 1
 display isolinux.msg
 ui gfxboot bootlogo isolinux.msg
+prompt   1
 timeout  200
 
 # start
 label start
   kernel /%INSTALL_DIR%/boot/x86_64/vmlinuz
-  append initrd=/%INSTALL_DIR%/boot/intel_ucode.img,/%INSTALL_DIR%/boot/x86_64/archiso.img archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archisocowlabel=ANT_OVRLY earlymodules=loop modules-load=loop rd.modules-load=loop udev.log-priority=crit rd.udev.log-priority=crit quiet splash
+  append initrd=/%INSTALL_DIR%/boot/intel_ucode.img,/%INSTALL_DIR%/boot/x86_64/archiso.img archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
 
 # hard disk
 label harddisk
